menu page mostly done - need css fix

--- a/app/packages/gemapp-core/lib/client/templates/authenticated/project-menu.html
+++ b/app/packages/gemapp-core/lib/client/templates/authenticated/project-menu.html
@@ -2,14 +2,17 @@
   <div class="container-fluid project-menu">
     <div class="row nav-bottom">
       <div class="nav-bottom-left">
-        <div class="col-md-4">
+        <div class="col-md-3">
           <div class="empty-space">
           </div>
           <div class="box-bottom-left">
             <div class="box-bottom-left-1">
+              <div id="element-count">3</div>
+              <img id="img-plus" src="/plus.png">
               <p>My Projects</p>
             </div>
             <div class="box-bottom-left-2">
+              <img id="img-contact" src="/contact.png">
               <img id="img-profile" class="img-circle" src="/GEM_people_in_field.png">
               <img id="img-profile" class="img-circle" src="/GEM_people_in_field.png">
               <img id="img-profile" class="img-circle" src="/GEM_people_in_field.png">
@@ -18,9 +21,12 @@
 
           <div class="box-bottom-left">
             <div class="box-bottom-left-1">
+              <div id="element-count">3</div>
+              <img id="img-plus" src="/plus.png">
               <p>My Mentors</p>
             </div>
             <div class="box-bottom-left-2">
+              <img id="img-contact" src="/contact.png">
               <img id="img-profile" class="img-circle" src="/GEM_people_in_field.png">
               <img id="img-profile" class="img-circle" src="/GEM_people_in_field.png">
             </div>   
@@ -28,9 +34,12 @@
 
           <div class="box-bottom-left">
             <div class="box-bottom-left-1">
+              <div id="element-count">3</div>
+              <img id="img-plus" src="/plus.png">
               <p>My Supporters</p>
             </div>
             <div class="box-bottom-left-2">
+              <img id="img-contact" src="/contact.png">
               <img id="img-profile" class="img-circle" src="/GEM_people_in_field.png">
               <img id="img-profile" class="img-circle" src="/GEM_people_in_field.png">
             </div>   
@@ -38,9 +47,12 @@
 
           <div class="box-bottom-left">
             <div class="box-bottom-left-1">
+              <div id="element-count">3</div>
+              <img id="img-plus" src="/plus.png">
               <p>My Friends</p>
             </div>
             <div class="box-bottom-left-2">
+              <img id="img-contact" src="/contact.png">
               <img id="img-profile" class="img-circle" src="/GEM_people_in_field.png">
               <img id="img-profile" class="img-circle" src="/GEM_people_in_field.png">
               <img id="img-profile" class="img-circle" src="/GEM_people_in_field.png">
@@ -50,30 +62,90 @@
 
       </div>
       <div class="nav-bottom-right">
-        <div class="col-md-8">
+        <div class="col-md-9">
           <div class="box-bottom-right">
             <img id="img-profile" class="img-circle" src="/GEM_people_in_field.png">
             <div class="box-bottom-right-1">
+              <div class="box-bottom-right-1-left">
+                <p>PROJECT NAME - Recreation</p>
+                <img id="img-star" src="/star.png">
+                <img id="img-star" src="/star.png">
+                <img id="img-star" src="/star.png">
+                <img id="img-star" src="/star.png">
+                <img id="img-star" src="/star.png">
+              </div>
+              <div class="box-bottom-right-1-right">
+                <p>Hug</p>
+                <p>Share</p>
+              </div>
               
+            </div>
+            <div class="box-bottom-right-2">
+              <div class="box-bottom-right-2-up">
+                <p>53% In Progress</p>
+              </div>
+              <div class="box-bottom-right-2-down">
+                <p>CONTRIBUTE</p>
+              </div>
             </div>
           </div>
 
           <div class="box-bottom-right">
             <img id="img-profile" class="img-circle" src="/GEM_people_in_field.png">
             <div class="box-bottom-right-1">
+              <div class="box-bottom-right-1-left">
+                <p>PROJECT NAME - Recreation</p>
+                <img id="img-star" src="/star.png">
+                <img id="img-star" src="/star.png">
+                <img id="img-star" src="/star.png">
+                <img id="img-star" src="/star.png">
+                <img id="img-star" src="/star.png">
+              </div>
+              <div class="box-bottom-right-1-right">
+                <p>Hug</p>
+                <p>Share</p>
+              </div>
               
+            </div>
+            <div class="box-bottom-right-2">
+              <div class="box-bottom-right-2-up">
+                <p>53% In Progress</p>
+              </div>
+              <div class="box-bottom-right-2-down">
+                <p>CONTRIBUTE</p>
+              </div>
             </div>
           </div>
 
           <div class="box-bottom-right">
             <img id="img-profile" class="img-circle" src="/GEM_people_in_field.png">
             <div class="box-bottom-right-1">
+              <div class="box-bottom-right-1-left">
+                <p>PROJECT NAME - Recreation</p>
+                <img id="img-star" src="/star.png">
+                <img id="img-star" src="/star.png">
+                <img id="img-star" src="/star.png">
+                <img id="img-star" src="/star.png">
+                <img id="img-star" src="/star.png">
+              </div>
+              <div class="box-bottom-right-1-right">
+                <p>Hug</p>
+                <p>Share</p>
+              </div>
               
             </div>
+            <div class="box-bottom-right-2">
+              <div class="box-bottom-right-2-up">
+                <p>53% In Progress</p>
+              </div>
+              <div class="box-bottom-right-2-down">
+                <p>CONTRIBUTE</p>
+              </div>
+            </div>
           </div>
+
         </div>
       </div>
-
     </div>
   </div>
 </template>
