--- a/app/packages/gemapp-core/lib/client/templates/header-menu.html
+++ b/app/packages/gemapp-core/lib/client/templates/header-menu.html
@@ -1,10 +1,11 @@
 <template name="header-menu">
-  <div class="container-fluid">
+  <div class="container-fluid header-menu">
     <div class="row nav-top">
       <div class="nav-top-left">
         <div class="col-md-8">
           <img id="img-person" src="/person.png">
           <img id="img-profile" class="img-circle" src="/GEM_people_in_field.png">
+          <p>USER NAME</p>
           <img id="img-map" src="/map.png">
           <img id="img-msg" src="/msg.png">
         </div>
