--- a/app/packages/gemapp-core/lib/client/templates/header.html
+++ b/app/packages/gemapp-core/lib/client/templates/header.html
@@ -2,6 +2,7 @@
   <nav class="navbar navbar-default nav-styling grey-font" role="navigation">
    <div class="container-fluid" >
       <div class="navbar-header">
+        <a class="" href="{{pathFor 'landing-page'}}"><img class="navbar-brand logo-styling" href="{{pathFor 'landing-page'}}" src="/gemlogo.png" alt="GEM Movement Logo"> </a>
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
           <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
@@ -9,7 +10,6 @@
           <span class="icon-bar"></span>
         </button>
         <!--<img class="navbar-brand gem-logo-primary" href="{{pathFor 'coming-soon'}}" src="/logo.png" alt="GEM Movement Logo">-->
-        <a href="#">enter</a>
       </div> <!--end of navbar-header -->
       <div class="collapse navbar-collapse">
         {{#if currentUser}}
@@ -34,9 +34,8 @@
 
          <ul class="nav navbar-nav navbar-right">
           <!--<li>{{> loginButtons align="right"}}</li>-->
-           <li><a class="" href="{{pathFor 'landing-page'}}"><img class="navbar-brand logo-styling" href="{{pathFor 'landing-page'}}" src="/gemlogo.png" alt="GEM Movement Logo"> </a></li>
-           <li><a href="#">hug</a></li>
-           <li><a href="#">share</a></li>
+           <li class="{{currentRoute 'login'}}"><a href="{{pathFor 'login'}}"> login </a></li>
+           <li class="{{currentRoute 'signup'}}"><a href="{{pathFor 'signup'}}">sign up</a></li>
          </ul>
         {{/if}} <!-- end of if else currentUser -->
       </div> <!-- end .navbar-collapse -->
