--- a/app/packages/gemapp-core/lib/client/templates/public/landing-page.html
+++ b/app/packages/gemapp-core/lib/client/templates/public/landing-page.html
@@ -7,6 +7,7 @@
    <div class="col-xs-12 col-sm-6 col-md-6 text-center">
       <br><h1>Global Empowerment Manadala</h1> 
       <h3>inspired youth, global change</h3> <br> 
+      <a class=""><button>TRY NOW</button></a> <br> <br>
       <a class="{{currentRoute 'project'}}" href="{{pathFor 'project'}}"><button>BROWSE PROJECTS</button></a>
     </div>
    </div>   
