fixing radio button selection in signup.html

--- a/app/packages/gemapp-core/lib/client/templates/public/signup.html
+++ b/app/packages/gemapp-core/lib/client/templates/public/signup.html
@@ -6,9 +6,9 @@
         {{> optRender name ='betaSignup'}}
         <label for="accountType">Account Type</label>
         <div class="form-group">
-          <input type=radio name="Youth" value="youth"> Youth<br>
+          <input type=radio name="foo" value="youth"> Youth<br>
           <p>Engaged youth ages 12-24 who are passionate about changing the world.</p>
-          <input type=radio name="Supporter" value="supporter"> Supporter<br>
+          <input type=radio name="foo" value="supporter"> Supporter<br>
           <p>Leaders, mentors, schools, non profit organizations, companies.</p>
         </div> <!-- end .form-group -->
         <div class="form-group">
